# ahp.2.o

./: .dockerignore  .env.example  .firebaserc  .gitignore  ACTION_PLAN_IMMEDIATE.md  AUDIT_SUMMARY_INDEX.md  DEPLOYMENT_CHECKLIST.sh  DEPLOYMENT_READINESS_AUDIT.md  DEPLOYMENT_SUMMARY_VISUAL.md  DEPLOYMENT_VISUAL_WORKFLOW.md  Dockerfile  HOSPYN_ERP_FULLSTACK_PLAN.md  IMPLEMENTATION_COMPLETE.md  LOCAL_DEPLOYMENT_SETUP.md  MASTER_NAVIGATION_GUIDE.md  PRODUCTION_100_100_READY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  QUICK_START.md  QUICK_START_DEPLOYMENT.md  README.md  README_DEPLOYMENT_100_100.md  SECRETS_MANAGEMENT.md  SETUP_COMPLETE.md  START_LOCAL_DEPLOYMENT.bat  START_LOCAL_DEPLOYMENT.ps1  TROUBLESHOOTING_LOGIN_REGISTRATION.md  ULTIMATE_PRODUCTION_HARDENING_PLAN.md  audit_report.md  check_db.py  check_records.py  create_doctor.py  current_logs.txt  db_init.py  detailed_logs.txt  diag_server.py  docker-compose.aws.yml  docker-compose.yml  dummy_backend.py  enc.key  firebase.json  (+50 more)
.firebase/: hosting.ZG9jdG9yLWFwcFxidWlsZA.cache  hosting.aG9zcGl0YWwtZXJwXGRpc3Q.cache  hosting.bGFuZGluZy1wYWdl.cache  hosting.cGF0aWVudC1hcHBcd2ViLWJ1aWxk.cache
alembic/: env.py
app/: main.py  main_simple.py
book/: README.md  index.html
docs/: PRIVACY_POLICY.md  architecture.md
doctor-app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.js
hospital-erp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hospyn-v2-web/: index.html  package-lock.json  package.json  tailwind.config.js
hr-portal/: package-lock.json  package.json
k8s/: aws-eks.yaml  deployment.yaml  network-policy.yaml
landing-page/: index.html  style.css
nginx/: nginx.conf
patient-app/: .easignore  AlternativeApp.js  App.js  DEVELOPING_OFFLINE.md  Dockerfile  app.json  babel.config.js  diagnose_load.js  eas.json  index.html  index.js  make_icons.py  metro.config.js  nginx.conf  package-lock.json  package.json  simple_test.html  start-web.js  vercel.json  webpack.config.js
scratch/: ai_test_output.txt  attacker_simulation.py  check_metadata.py  check_optional.py  check_otp_table.py  check_sig.py  clean_migrations.py  clinical_stress_test.py  debug_api.py  debug_import.py  find_defective.py  find_missing_imports.py  fix_branding.py  fix_firebase_auth.py  fix_imports.py  fix_keys.py  fix_migration_imports.py  fix_postgres_enums.py  harden_migration.py  init_db.py  lint_optional.py  list_all_data.py  logs_00123.json  logs_debug.json  logs_full.json  logs_raw.json  logs_recent.json  manual_migrate.py  migrate_ids.py  migrate_patient_ids.py  migrate_secrets.py  nuclear_fix_imports.py  otp_req.json  otp_test.json  patch_if_not_exists.py  patch_safe_index.py  polish_index_syntax.py  polish_migrations.py  remove_duplicates.py  reset_db.py  (+21 more)
scripts/: add_family_members_manual.py  backup_db.sh  backup_manager.py  chaos_simulation.py  check_db_tables.py  clean_alembic.py  clinical_load_tester.py  cloud_sync.py  concurrency_test.py  deploy_gcp_data_layer.ps1  entrypoint.sh  expert_verify.py  health_diagnostics.py  migrate.py  optimize_performance.py  rotate_keys.py  runtime_enforcement_test.py  seed_demo_data.py  setup_gcp_cicd.ps1  setup_rls.sql  simulate_load.py  smoke_test_billing.py  sync_events_family.py  sync_records_family.py  verify_doctor_reg.py  verify_hardening.py  verify_truth.py
staff-portal/: package.json  (+4 more)
(+399 files in other folders)
